new folder structure/dev server/bundle setup and running properly

--- a/client/html/index.html
+++ b/client/html/index.html
@@ -6,8 +6,9 @@
   <link rel="stylesheet" href="./main.css">
 </head>
 <body>
-  <p> loading screen is gangsta</p>
-  <div id="app"></div>
+  <div id="app">
+    <p> loading screen is gangsta</p>
+  </div>
   <script src="bundle.js"></script>
 </body>
 </html>
