--- a/client/html/index.html
+++ b/client/html/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <title>WotWot Rendered server-side</title>
+  <title>WotWot</title>
 
   <link rel="stylesheet" href="./main.css">
 </head>
