--- a/client/html/index.html
+++ b/client/html/index.html
@@ -1,13 +1,17 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+  <meta charset="UTF-8">
+  
   <title>WotWot</title>
 
   <link rel="stylesheet" href="./main.css">
+<script src="https://www.gstatic.com/firebasejs/3.1.0/firebase.js"></script>
+
 </head>
 <body>
   <div id="app">
-    <p> loading screen is gangsta </p>
+    <p> loading WotWot </p>
   </div>
   <script src="bundle.js"></script>
 </body>
