Small tweaks to names - less karma more whatwhat?

--- a/client/html/login.html
+++ b/client/html/login.html
@@ -2,8 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>Final Project</title>
-  <link rel="stylesheet" href="semantic.css">
+  <title>Login</title>
   <link rel="stylesheet" href="main.css">
 
   <script src="https://www.gstatic.com/firebasejs/3.1.0/firebase.js"></script>
